@@ -14,6 +14,8 @@
   don't unnecessarily link with libelf and libdl (USC)
   fix compile warnings with qsort/bsearch on bsd/darwin (USC)
   fix --disable-filesync to actually work (USC)
+  added prolog diagnostics to 'momctl -d' output (CRI)
+  added logging for job file management (CRI)
 
 2.0.0p2
 
